Fix for jaxws issue 144: Directly using URL to validate the address has problem recognizing local://.